# netconf

./: README.md  make-libssh.sh  make-libyang.sh  make-netopeer2.sh  make-openssl.sh  make-pcre.sh  make-zlib.sh  make.sh
all/: libssh.so.4.8.1  libsysrepo.so.5.5.8
all/cmake/libssh/: libssh-config.cmake
all/pkgconfig/: libpcreposix.pc  libssh.pc  libyang.pc
lib/: cp.sh
lib/libnetconf2/: CMakeLists.txt
lib/libnetconf2/_install/include/libnetconf2/: config.h
lib/libnetconf2/_install/lib/: libnetconf2.so.1.3.5
lib/libnetconf2/_install/lib/pkgconfig/: libnetconf2.pc
lib/libssh/: compile_commands.json
lib/libssh/debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json  install_manifest.txt
lib/libyang/: CMakeLists.txt
lib/libyang/_install/lib/: libyang.so.1.8.4
lib/libyang/debug/: CMakeCache.txt
lib/libyang/lib/: libyang.so.1.8.4
lib/libyang/lib/pkgconfig/: libyang.pc
lib/openssl/: CMakeLists.txt
lib/openssl/debug/: CMakeCache.txt  Makefile  cmake_install.cmake
lib/zlib/: CMakeLists.txt
lib/zlib/debug/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
lib_src/pcre-8.44/: Makefile  aclocal.m4  build.sh  build1.sh  config.h  config.status  configure  libpcre.la  libpcre.pc  libpcre16.pc  libpcre32.pc  libpcrecpp.la  libpcrecpp.pc  libpcreposix.la  libpcreposix.pc  libtool  pcre-config  pcre_scanner_unittest  pcre_stringpiece_unittest  pcrecpp_unittest  pcregrep  pcretest
lib_src/pcre-8.44/.deps/: libpcre_la-pcre_byte_order.Plo  libpcre_la-pcre_chartables.Plo  libpcre_la-pcre_compile.Plo  libpcre_la-pcre_config.Plo  libpcre_la-pcre_dfa_exec.Plo  libpcre_la-pcre_exec.Plo  libpcre_la-pcre_fullinfo.Plo  libpcre_la-pcre_get.Plo  libpcre_la-pcre_globals.Plo  libpcre_la-pcre_jit_compile.Plo  libpcre_la-pcre_maketables.Plo  libpcre_la-pcre_newline.Plo  libpcre_la-pcre_ord2utf8.Plo  libpcre_la-pcre_refcount.Plo  libpcre_la-pcre_string_utils.Plo  libpcre_la-pcre_study.Plo  libpcre_la-pcre_tables.Plo  libpcre_la-pcre_ucd.Plo  libpcre_la-pcre_valid_utf8.Plo  libpcre_la-pcre_version.Plo  libpcre_la-pcre_xclass.Plo  libpcrecpp_la-pcre_scanner.Plo  libpcrecpp_la-pcre_stringpiece.Plo  libpcrecpp_la-pcrecpp.Plo  libpcreposix_la-pcreposix.Plo  pcregrep-pcregrep.Po  (+5 more)
x86_64/: log  make-libnetconf2.sh  make-libssh.sh  make-libyang.sh  make-netopeer2.sh  make-openssl.sh  make-zlib.sh  make.sh
x86_64/install/: sh
(+220 files in other folders)
